# pyCharts

./: 002-anothergraph.py  003-sincosgraph.py  004-concentriccircle.py  005-HypnoticCircles.py  006-DataGen.py  006-controlchart.py  data.csv  plotgraph.py  pyproject.toml  readme.md
