[tool.poetry]
name = "mypycharts"
version = "0.1.0"
description = "this program showcases power of python and its libraries to generate charts"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
control = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
